Overflow fix

--- a/src/styles/generic/_generic.global.scss
+++ b/src/styles/generic/_generic.global.scss
@@ -12,7 +12,7 @@ body {
   text-shadow: rgba(0, 0, 0, 0.01) 0 0 1px;
 }
 
-main {
+#___gatsby {
   background-color: aquamarine;
   overflow: hidden;
 }
